# dejagnu-am-ng

./: .gitignore  ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac
am-ng/: am-dir.mk  check-typos.mk  header-vars.mk  texibuild.mk
example/calc/: Makefile.in  configure  configure.ac
example/hello/: Makefile.in  aclocal.m4  configure  configure.ac
example/hello/am-ng/: clean.mk  common-targets.mk  header-vars.mk
example/hello/testsuite/: Makefile.in  site.exp
example/mathhelper/: Makefile.in  aclocal.m4  configure  configure.ac
example/mathhelper/am-ng/: clean.mk
example/mathhelper/libmathhelper/: Makefile.in
example/mathhelper/testsuite/: Makefile.in
example/mathhelper/testsuite/mathhelper/: Makefile.am  Makefile.in
