dnl Process this file with autoconf to produce a configure script.
AC_PREREQ([2.65])

AC_INIT([calc], [1.2])
AC_CONFIG_SRCDIR([calc.c])
AC_CONFIG_HEADERS([calc.h])
AM_INIT_AUTOMAKE([ng])

AC_PROG_CC

AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_FUNC([strcmp])

AM_MAINTAINER_MODE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
